update shows and merch, fix overflow scrolling

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,12 @@
     padding: 0;
 }
 
-html {
+html, body {
     background-color: white;
     scroll-behavior: smooth;
-}
-
-body {
+    max-width: 100vw;
+    overflow-x: hidden;
+    overflow-y: scroll;
     font-family: 'Oswald', sans-serif;
 }
 
@@ -16,7 +16,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 100%;
+
 }
 
 /* header */
